--- a/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/MainWindow.xaml
+++ b/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/MainWindow.xaml
@@ -10,7 +10,7 @@
         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="208" Margin="147,66,0,0" Stroke="Black" VerticalAlignment="Top" Width="713" StrokeThickness="2"/>
         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="208" Margin="147,333,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="713"/>
         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="208" Margin="147,595,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="713"/>
-        <CheckBox x:Name="checkBoxStatePhysicalButton" Content="" HorizontalAlignment="Left" Margin="382,119,0,0" VerticalAlignment="Top"/>
+        <CheckBox x:Name="checkBoxStateButton" Content="" HorizontalAlignment="Left" Margin="382,119,0,0" VerticalAlignment="Top"/>
         <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="188,373,0,0" TextWrapping="Wrap" Text="Emotion :" VerticalAlignment="Top"/>
         <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="188,124,0,0" TextWrapping="Wrap" Text="Etat du bouton physique :" VerticalAlignment="Top"/>
         <TextBlock x:Name="textBlockEmotionApi" HorizontalAlignment="Left" Margin="188,441,0,0" TextWrapping="Wrap" Text="En attente d'informations" VerticalAlignment="Top" Height="100" Width="662"/>
@@ -26,5 +26,6 @@
         <Canvas Name="PhotoCanvas" Width="320" Height="320" Background="Gray"  Margin="888,339,712,421" Visibility="Visible">
             <Image x:Name="captureImage" Width="320" Height="320" Visibility="Visible" Canvas.Left="110" Canvas.Top="-10"/>
         </Canvas>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="276,193,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
     </Grid>
 </Window>
