--- a/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/MainWindow.xaml
+++ b/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/MainWindow.xaml
@@ -7,27 +7,18 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="720" Width="1280">
     <Grid>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="208" Margin="147,66,0,0" Stroke="Black" VerticalAlignment="Top" Width="713" StrokeThickness="2"/>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="208" Margin="147,333,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="713"/>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="208" Margin="147,595,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="713"/>
-        <CheckBox x:Name="checkBoxStateButton" Content="" HorizontalAlignment="Left" Margin="382,119,0,0" VerticalAlignment="Top"/>
-        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="188,373,0,0" TextWrapping="Wrap" Text="Emotion :" VerticalAlignment="Top"/>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="188,124,0,0" TextWrapping="Wrap" Text="Etat du bouton physique :" VerticalAlignment="Top"/>
-        <TextBlock x:Name="textBlockEmotionApi" HorizontalAlignment="Left" Margin="188,441,0,0" TextWrapping="Wrap" Text="En attente d'informations" VerticalAlignment="Top" Height="176" Width="662"/>
-        <TextBlock x:Name="textBlock2" HorizontalAlignment="Left" Margin="188,639,0,0" TextWrapping="Wrap" Text="Meteo :" VerticalAlignment="Top"/>
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="208" Margin="714,374,0,0" Stroke="Black" VerticalAlignment="Top" Width="302" StrokeThickness="2"/>
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="560" Margin="82,80,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="560"/>
+        <CheckBox x:Name="checkBoxStateButton" Content="" HorizontalAlignment="Left" Margin="753,529,0,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="125,111,0,0" TextWrapping="Wrap" Text="Emotion :" VerticalAlignment="Top"/>
+        <TextBlock x:Name="textBlockEmotionApi" HorizontalAlignment="Left" Margin="125,170,0,0" TextWrapping="Wrap" Text="En attente d'informations" VerticalAlignment="Top" Height="439" Width="481"/>
         <TextBlock x:Name="textBlockMeteoApi" HorizontalAlignment="Left" Margin="188,684,0,0" TextWrapping="Wrap" Text="En attente d'informations" VerticalAlignment="Top" Height="104" Width="662"/>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="208" Margin="939,66,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="714"/>
-        <TextBlock x:Name="textBlock3" HorizontalAlignment="Left" Margin="984,124,0,0" TextWrapping="Wrap" Text="Time :" VerticalAlignment="Top"/>
-        <TextBlock x:Name="textBlockTime" HorizontalAlignment="Left" Margin="984,167,0,0" TextWrapping="Wrap" Text="00h00" VerticalAlignment="Top"/>
-        <TextBlock x:Name="textBlockInitWebcam" HorizontalAlignment="Left" Margin="188,398,0,0" TextWrapping="Wrap" Text="Webcam non initialisée." VerticalAlignment="Top" Height="43" Width="648"/>
-
-
-
-        <Canvas Name="PhotoCanvas" Width="320" Height="320" Background="Gray"  Margin="888,339,712,421" Visibility="Visible">
-            <Image x:Name="captureImage" Width="320" Height="320" Visibility="Visible" Canvas.Left="110" Canvas.Top="-10"/>
-        </Canvas>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="276,193,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="208" Margin="714,80,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="302"/>
+        <TextBlock x:Name="textBlock3" HorizontalAlignment="Left" Margin="759,111,0,0" TextWrapping="Wrap" Text="Time :" VerticalAlignment="Top"/>
+        <TextBlock x:Name="textBlockTime" HorizontalAlignment="Left" Margin="759,167,0,0" TextWrapping="Wrap" Text="00h00" VerticalAlignment="Top"/>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="744,409,0,0" VerticalAlignment="Top" Width="76" Click="button_Click"/>
         <Button x:Name="button1" Content="infinite loop button
-                " HorizontalAlignment="Left" Margin="664,225,0,0" VerticalAlignment="Top" Width="145" Height="24" Click="button1_Click"/>
+                " HorizontalAlignment="Left" Margin="744,461,0,0" VerticalAlignment="Top" Width="145" Height="24" Click="button1_Click"/>
+        <Button x:Name="button2" Content="Button" HorizontalAlignment="Left" Margin="910,544,0,0" VerticalAlignment="Top" Width="75" Click="button2_Click"/>
     </Grid>
 </Window>
