--- a/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/MainWindow.xaml
+++ b/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/MainWindow.xaml
@@ -7,18 +7,24 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="720" Width="1280">
     <Grid>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="208" Margin="714,374,0,0" Stroke="Black" VerticalAlignment="Top" Width="302" StrokeThickness="2"/>
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="208" Margin="714,429,0,0" Stroke="Black" VerticalAlignment="Top" Width="302" StrokeThickness="2"/>
         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="560" Margin="82,80,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="560"/>
-        <CheckBox x:Name="checkBoxStateButton" Content="" HorizontalAlignment="Left" Margin="753,529,0,0" VerticalAlignment="Top"/>
         <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="125,111,0,0" TextWrapping="Wrap" Text="Emotion :" VerticalAlignment="Top"/>
         <TextBlock x:Name="textBlockEmotionApi" HorizontalAlignment="Left" Margin="125,170,0,0" TextWrapping="Wrap" Text="En attente d'informations" VerticalAlignment="Top" Height="439" Width="481"/>
         <TextBlock x:Name="textBlockMeteoApi" HorizontalAlignment="Left" Margin="188,684,0,0" TextWrapping="Wrap" Text="En attente d'informations" VerticalAlignment="Top" Height="104" Width="662"/>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="208" Margin="714,80,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="302"/>
-        <TextBlock x:Name="textBlock3" HorizontalAlignment="Left" Margin="759,111,0,0" TextWrapping="Wrap" Text="Time :" VerticalAlignment="Top"/>
-        <TextBlock x:Name="textBlockTime" HorizontalAlignment="Left" Margin="759,167,0,0" TextWrapping="Wrap" Text="00h00" VerticalAlignment="Top"/>
-        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="744,409,0,0" VerticalAlignment="Top" Width="76" Click="button_Click"/>
-        <Button x:Name="button1" Content="infinite loop button
-                " HorizontalAlignment="Left" Margin="744,461,0,0" VerticalAlignment="Top" Width="145" Height="24" Click="button1_Click"/>
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="232" Margin="714,80,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="302"/>
+        <TextBlock x:Name="textBlock3" HorizontalAlignment="Left" Margin="741,98,0,0" TextWrapping="Wrap" Text="Time :" VerticalAlignment="Top"/>
+        <TextBlock x:Name="textBlockTime" HorizontalAlignment="Left" Margin="744,119,0,0" TextWrapping="Wrap" Text="00h00" VerticalAlignment="Top"/>
         <Button x:Name="button2" Content="Button" HorizontalAlignment="Left" Margin="910,544,0,0" VerticalAlignment="Top" Width="75" Click="button2_Click"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="740,157,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="131" Width="80"><Run Text="Joie"/><LineBreak/><Run Text="Tristesse"/><LineBreak/><Run Text="Surprise"/><LineBreak/><Run Text="Crainte"/><LineBreak/><Run Text="Colere"/><LineBreak/><Run Text="Mépris"/><LineBreak/><Run Text="Dégoût"/><LineBreak/><Run Text="Neutrlité"/><LineBreak/><Run/></TextBlock>
+        <Rectangle x:Name="happiness" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,157,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="sadness" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,176,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="surprise" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,191,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="fear" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,211,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="anger" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,226,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="contempt" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,242,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="disgust" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,257,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="neutral" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,272,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        
     </Grid>
 </Window>
