--- a/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/MainWindow.xaml
+++ b/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/MainWindow.xaml
@@ -15,7 +15,7 @@
         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="232" Margin="714,80,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="302"/>
         <TextBlock x:Name="textBlock3" HorizontalAlignment="Left" Margin="741,98,0,0" TextWrapping="Wrap" Text="Time :" VerticalAlignment="Top"/>
         <TextBlock x:Name="textBlockTime" HorizontalAlignment="Left" Margin="744,119,0,0" TextWrapping="Wrap" Text="00h00" VerticalAlignment="Top"/>
-        <Button x:Name="button2" Content="Button" HorizontalAlignment="Left" Margin="910,544,0,0" VerticalAlignment="Top" Width="75" Click="button2_Click"/>
+        <Button x:Name="button2" Content="Button 2" HorizontalAlignment="Left" Margin="761,468,0,0" VerticalAlignment="Top" Width="75" Click="button2_Click"/>
         <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="740,157,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="131" Width="80"><Run Text="Joie"/><LineBreak/><Run Text="Tristesse"/><LineBreak/><Run Text="Surprise"/><LineBreak/><Run Text="Crainte"/><LineBreak/><Run Text="Colere"/><LineBreak/><Run Text="Mépris"/><LineBreak/><Run Text="Dégoût"/><LineBreak/><Run Text="Neutrlité"/><LineBreak/><Run/></TextBlock>
         <Rectangle x:Name="happiness" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,157,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
         <Rectangle x:Name="sadness" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,176,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
@@ -25,6 +25,7 @@
         <Rectangle x:Name="contempt" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,242,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
         <Rectangle x:Name="disgust" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,257,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
         <Rectangle x:Name="neutral" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,272,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
-        
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="761,518,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+
     </Grid>
 </Window>
