--- a/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/MainWindow.xaml
+++ b/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/MainWindow.xaml
@@ -6,27 +6,22 @@
         xmlns:local="clr-namespace:InteractiveMirorMinWinPc"
         mc:Ignorable="d"
         Title="MainWindow" Height="720" Width="1280">
-    <Grid>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="208" Margin="714,429,0,0" Stroke="Black" VerticalAlignment="Top" Width="302" StrokeThickness="2"/>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="560" Margin="82,80,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="560"/>
-        <TextBlock x:Name="textBlock1" HorizontalAlignment="Left" Margin="125,111,0,0" TextWrapping="Wrap" Text="Emotion :" VerticalAlignment="Top"/>
-        <TextBlock x:Name="textBlockEmotionApi" HorizontalAlignment="Left" Margin="125,170,0,0" TextWrapping="Wrap" Text="En attente d'informations" VerticalAlignment="Top" Height="439" Width="481"/>
-        <TextBlock x:Name="textBlockMeteoApi" HorizontalAlignment="Left" Margin="188,684,0,0" TextWrapping="Wrap" Text="En attente d'informations" VerticalAlignment="Top" Height="104" Width="662"/>
-        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="232" Margin="714,80,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="302"/>
-        <TextBlock x:Name="textBlock3" HorizontalAlignment="Left" Margin="741,98,0,0" TextWrapping="Wrap" Text="Time :" VerticalAlignment="Top"/>
-        <TextBlock x:Name="textBlockTime" HorizontalAlignment="Left" Margin="744,119,0,0" TextWrapping="Wrap" Text="00h00" VerticalAlignment="Top"/>
-       
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="740,157,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="131" Width="80"><Run Text="Joie"/><LineBreak/><Run Text="Tristesse"/><LineBreak/><Run Text="Surprise"/><LineBreak/><Run Text="Crainte"/><LineBreak/><Run Text="Colere"/><LineBreak/><Run Text="Mépris"/><LineBreak/><Run Text="Dégoût"/><LineBreak/><Run Text="Neutrlité"/><LineBreak/><Run/></TextBlock>
-        <Rectangle x:Name="happiness" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,157,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
-        <Rectangle x:Name="sadness" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,176,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
-        <Rectangle x:Name="surprise" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,191,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
-        <Rectangle x:Name="fear" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,211,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
-        <Rectangle x:Name="anger" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,226,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
-        <Rectangle x:Name="contempt" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,242,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
-        <Rectangle x:Name="disgust" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,257,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
-        <Rectangle x:Name="neutral" Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="10" Margin="825,272,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+    <Grid Background="{DynamicResource {x:Static SystemColors.WindowTextBrushKey}}">
+        <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="208" Margin="725,444,0,0" Stroke="Black" VerticalAlignment="Top" Width="302" StrokeThickness="2"/>
+        <TextBlock x:Name="textBlockEmotionApi" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="En attente d'informations" VerticalAlignment="Top" Height="312" Width="309" Foreground="Lime"/>
+        <TextBlock x:Name="textBlockTime" HorizontalAlignment="Left" Margin="869,36,0,0" TextWrapping="Wrap" Text="00h00" VerticalAlignment="Top" FontFamily="Segoe Print" FontSize="36" FontWeight="Bold" Foreground="White" Width="326" Height="151"/>
+
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="63,409,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="256" Width="138" FontFamily="Segoe Print" FontSize="18" FontWeight="Bold" Foreground="White"><Run Text="Joie"/><LineBreak/><Run Text="Tristesse"/><LineBreak/><Run Text="Surprise"/><LineBreak/><Run Text="Crainte"/><LineBreak/><Run Text="Colere"/><LineBreak/><Run Text="Mépris"/><LineBreak/><Run Text="Dégoût"/><LineBreak/><Run Text="Neutrlité"/><LineBreak/><Run/></TextBlock>
+        <Rectangle x:Name="happiness" Fill="#FFF9EE00" HorizontalAlignment="Left" Height="20" Margin="190,419,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="sadness" Fill="#FF5B054B" HorizontalAlignment="Left" Height="23" Margin="190,444,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="surprise" Fill="#FFF3A547" HorizontalAlignment="Left" Height="29" Margin="190,484,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="fear" Fill="#FF161666" HorizontalAlignment="Left" Height="20" Margin="190,518,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="anger" Fill="#FFFF300F" HorizontalAlignment="Left" Height="24" Margin="190,549,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="contempt" Fill="#FF5D210B" HorizontalAlignment="Left" Height="17" Margin="190,588,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="disgust" Fill="#FF9B5605" HorizontalAlignment="Left" Height="20" Margin="190,610,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="neutral" Fill="#FF7C7C7C" HorizontalAlignment="Left" Height="20" Margin="190,635,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
         <Button x:Name="button" Content="Bouton pour lancer l'analyse d'émotions" HorizontalAlignment="Left" Margin="761,518,0,0" VerticalAlignment="Top" Width="239" Click="button_Click"/>
-        <TextBlock x:Name="countDisplayed" HorizontalAlignment="Left" Margin="888,111,0,0" TextWrapping="Wrap" Text="count" VerticalAlignment="Top"/>
+        <TextBlock x:Name="countDisplayed" HorizontalAlignment="Left" Margin="509,23,0,0" TextWrapping="Wrap" Text="count" VerticalAlignment="Top" Foreground="Lime"/>
 
     </Grid>
 </Window>
