--- a/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/MainWindow.xaml
+++ b/InteractiveMirorMinWinPc/InteractiveMirorMinWinPc/MainWindow.xaml
@@ -8,18 +8,18 @@
         Title="MainWindow" Height="720" Width="1280">
     <Grid Background="{DynamicResource {x:Static SystemColors.WindowTextBrushKey}}">
         <Rectangle Fill="#FFF4F4F5" HorizontalAlignment="Left" Height="208" Margin="725,444,0,0" Stroke="Black" VerticalAlignment="Top" Width="302" StrokeThickness="2"/>
-        <TextBlock x:Name="textBlockEmotionApi" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="En attente d'informations" VerticalAlignment="Top" Height="312" Width="309" Foreground="Lime"/>
-        <TextBlock x:Name="textBlockTime" HorizontalAlignment="Left" Margin="869,36,0,0" TextWrapping="Wrap" Text="00h00" VerticalAlignment="Top" FontFamily="Segoe Print" FontSize="36" FontWeight="Bold" Foreground="White" Width="326" Height="151"/>
+        <TextBlock x:Name="textBlockEmotionApi" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="En attente d'informations" VerticalAlignment="Top" Height="264" Width="309" Foreground="Lime"/>
+        <TextBlock x:Name="textBlockTime" HorizontalAlignment="Left" Margin="869,36,0,0" TextWrapping="Wrap" Text="00h00" VerticalAlignment="Top" FontFamily="Global Monospace" FontSize="36" Foreground="White" Width="326" Height="151"/>
 
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="63,409,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="256" Width="138" FontFamily="Segoe Print" FontSize="18" FontWeight="Bold" Foreground="White"><Run Text="Joie"/><LineBreak/><Run Text="Tristesse"/><LineBreak/><Run Text="Surprise"/><LineBreak/><Run Text="Crainte"/><LineBreak/><Run Text="Colere"/><LineBreak/><Run Text="Mépris"/><LineBreak/><Run Text="Dégoût"/><LineBreak/><Run Text="Neutrlité"/><LineBreak/><Run/></TextBlock>
-        <Rectangle x:Name="happiness" Fill="#FFF9EE00" HorizontalAlignment="Left" Height="20" Margin="190,419,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
-        <Rectangle x:Name="sadness" Fill="#FF5B054B" HorizontalAlignment="Left" Height="20" Margin="190,444,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
-        <Rectangle x:Name="surprise" Fill="#FFF3A547" HorizontalAlignment="Left" Height="20" Margin="190,479,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
-        <Rectangle x:Name="fear" Fill="#FF161666" HorizontalAlignment="Left" Height="20" Margin="190,504,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
-        <Rectangle x:Name="anger" Fill="#FFFF300F" HorizontalAlignment="Left" Height="20" Margin="190,542,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
-        <Rectangle x:Name="contempt" Fill="#FF5D210B" HorizontalAlignment="Left" Height="20" Margin="190,576,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
-        <Rectangle x:Name="disgust" Fill="#FF9B5605" HorizontalAlignment="Left" Height="20" Margin="190,610,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
-        <Rectangle x:Name="neutral" Fill="#FF7C7C7C" HorizontalAlignment="Left" Height="20" Margin="190,635,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="67,363,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="271" Width="172" FontFamily="Global Monospace" FontSize="28" Foreground="White"><Run Text="Joie"/><LineBreak/><Run Text="Tristesse"/><LineBreak/><Run Text="Surprise"/><LineBreak/><Run Text="Crainte"/><LineBreak/><Run Text="Col"/><Run Text="è"/><Run Text="re"/><LineBreak/><Run Text="Mépris"/><LineBreak/><Run Text="Dégoût"/><LineBreak/><Run Text="Neutrlité"/><LineBreak/><Run/></TextBlock>
+        <Rectangle x:Name="happiness" Fill="#FFF9EE00" HorizontalAlignment="Left" Height="20" Margin="239,365,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="sadness" Fill="#FF5B054B" HorizontalAlignment="Left" Height="20" Margin="239,400,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="surprise" Fill="#FFF3A547" HorizontalAlignment="Left" Height="20" Margin="239,435,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="fear" Fill="#FF161666" HorizontalAlignment="Left" Height="20" Margin="239,470,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="anger" Fill="#FFFF300F" HorizontalAlignment="Left" Height="20" Margin="239,505,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="contempt" Fill="#FF5D210B" HorizontalAlignment="Left" Height="20" Margin="239,540,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="disgust" Fill="#FF9B5605" HorizontalAlignment="Left" Height="20" Margin="239,575,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
+        <Rectangle x:Name="neutral" Fill="#FF7C7C7C" HorizontalAlignment="Left" Height="20" Margin="239,610,0,0" Stroke="Black" StrokeThickness="2" VerticalAlignment="Top" Width="100"/>
         <Button x:Name="button" Content="Bouton pour lancer l'analyse d'émotions" HorizontalAlignment="Left" Margin="761,518,0,0" VerticalAlignment="Top" Width="239" Click="button_Click"/>
         <TextBlock x:Name="countDisplayed" HorizontalAlignment="Left" Margin="509,23,0,0" TextWrapping="Wrap" Text="count" VerticalAlignment="Top" Foreground="Lime"/>
 
